AwsEcsService: Require AwsProvider

--- a/src/types/AwsEcsService/serverless.yml
+++ b/src/types/AwsEcsService/serverless.yml
@@ -83,6 +83,7 @@ schedulingStrategy:
 inputTypes:
   provider:
     type: AwsProvider
+    required: true
   serviceName:
     type: string
     example: myAwsEcsService
