--- a/src/types/AwsFargate/serverless.yml
+++ b/src/types/AwsFargate/serverless.yml
@@ -25,6 +25,9 @@ networkInterfaces:
   description: "Information about one or more network interfaces attached to the Tasks. Network Interface definition: https://docs.aws.amazon.com/AWSEC2/latest/APIReference/API_NetworkInterface.html"
 
 inputTypes:
+  provider:
+    type: AwsProvider
+    required: true
   serviceName:
     type: string
     description: The name of your service. Up to 255 letters (uppercase and lowercase), numbers, hyphens, and underscores are allowed. Service names must be unique within a cluster, but you can have similarly named services in multiple clusters within a Region or across multiple Regions.
